name:               lhao03-github-io-hakyll
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.15.*
                  , hakyll-sass == 0.2.4
                  , time == 1.9.3
                  , old-locale == 1.0.0.7
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    filepath
  default-language: Haskell2010
